<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_New_Account"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/background_sign_up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayout"
            app:hintEnabled="true"
            android:hint="@string/Name"
            android:textColorHint="@color/hintColor"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileInputLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayout"
                app:hintEnabled="true"
                android:hint="@string/Mobile"
                android:textColorHint="@color/hintColor"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/countryCode"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/getCodeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/background_button">

                    <ProgressBar
                        android:id="@+id/getCodeButtonProgress"
                        android:visibility="gone"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:theme="@style/ProgressButton"/>

                    <TextView
                        android:id="@+id/getCodeButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/get_code"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/getCodeTimer"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/verificationCodeInputLayout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLayout"
            app:hintEnabled="true"
            android:hint="@string/Verification_Code"
            android:textColorHint="@color/hintColor"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/verificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="100dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:text="@string/LoginLink"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:background="@drawable/background_button">

            <ProgressBar
                android:id="@+id/signUpButtonProgress"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:theme="@style/ProgressButton"/>

            <TextView
                android:id="@+id/signUpButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Create_New_Account"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>