<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/chatActivityBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/gradient_toolbar_background"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:cardCornerRadius="22dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/Profile_Image"
                android:src="@drawable/ic_profile"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Manushi"
                android:textSize="23sp"
                android:textColor="@android:color/white"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/activityStatus"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="online"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="2dp"/>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/messageBar"
        tools:itemCount="1"
        tools:listitem="@layout/chat_list_item"/>

    <LinearLayout
        android:id="@+id/messageBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chatActivityBackground"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:background="@drawable/shape_message_box"
            android:hint="@string/messageBoxHint"
            android:textColorHint="@android:color/tertiary_text_light"
            android:textColor="@android:color/primary_text_light"
            android:padding="10dp"/>

        <ImageButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sendButton"
            android:src="@drawable/ic_send"
            android:tint="@android:color/white"
            android:background="@drawable/shape_send_button"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>